--- a/_config/facebookserversidepixel.yml
+++ b/_config/facebookserversidepixel.yml
@@ -4,6 +4,9 @@ name: facebookserversidepixel
 SilverStripe\CMS\Model\SiteTree:
   extensions:
     - XD\SilverStripeFacebookServerSidePixel\Extensions\SiteTreeExtension
+# SilverShop\Page\Product:
+#   extensions:
+#     - XD\SilverStripeFacebookServerSidePixel\Extensions\ProductExtension
 # SilverShop\Model\Order:
 #   extensions:
 #     - XD\SilverStripeFacebookServerSidePixel\Extensions\OrderExtension
